parte final de el logo de la pagina de inicio,falta el responsive

--- a/src/app/component/banner/banner.component.html
+++ b/src/app/component/banner/banner.component.html
@@ -1,13 +1,22 @@
+ <div>
  <div class="banner">
 
-  <h1 class="Letra1">Star</h1>
+  <h1 class="Letra1">STAR</h1>
 
  </div>
+
+ <div >
+   <h3 class="Letra2">EL ASCENSO DE SKYWALKER</h3>
+ </div>
+
+ <div>
+   <h2 class="Letra3">WARS</h2>
+ </div>
+</div>
 
 <div class="footer">
   Espacio para el footer
 </div>
-
 
 
 
