--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>index.html</title>
-</head>
-<body>
-  <app-header></app-header>|
-  <app-banner></app-banner>
-</body>
-</html>
+
+
+  <!--<app-banner></app-banner>
+  <app-historia></app-historia>-->
+
+  <router-outlet></router-outlet>
