--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -5,7 +5,7 @@
   <div class="logo">Star Wars <br> &nbsp; &nbsp; App</div>
 </a>
     <nav>
-      <a href="#">HISTORIA</a>
+      <a href="">HISTORIA</a>
       <a href="#">PELICULAS</a>
       <a href="#">PERSONAS</a>
       <a href="#">PLANETAS</a>
