modificamos el header para dejarlo libre o estatico del body

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 
+   <app-header></app-header>
 
   <!--<app-banner></app-banner>
   <app-historia></app-historia>-->
 
   <router-outlet></router-outlet>
+
+
