--- a/src/app/component/historia/historia.component.html
+++ b/src/app/component/historia/historia.component.html
@@ -1,27 +1,11 @@
 
-<header >
-  <div class="wrapper">
-      <a href="index.html">
-    <div class="logo">Star Wars <br> &nbsp; &nbsp; App</div>
-  </a>
-      <nav>
-        <a href="#">HISTORIA</a>
-        <a href="#">PELICULAS</a>
-        <a href="#">PERSONAS</a>
-        <a href="#">PLANETAS</a>
-        <a href="#">ESPECIES</a>
-        <a href="#">NAVES ESPACIALES</a>
-        <a href="#">VEHICULOS</a>
-      </nav>
-  </div>
-    </header>
 <br>
 <div class="fondo">
 <p class="home">Home - Historia</p>
 <br>
 
   <div>
-  <center><h1>HISTORIA</h1></center>
+     <h1>HISTORIA</h1>
 </div>
 <br>
 
