integracion de las demas paginas con el banner principal,falta los links al click

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
    <app-header></app-header>
 
   <!--<app-banner></app-banner>
-  <app-historia></app-historia>-->
+  <app-historia></app-historia>
+  <app-vehiculos></app-vehiculos>-->
 
   <router-outlet></router-outlet>
 
