--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -5,13 +5,15 @@
     <div class="logo">Star Wars <br> &nbsp; &nbsp; App</div>
   </a>
       <nav>
-        <a routerLink="historia">HISTORIA</a>
-        <a href="#">PELICULAS</a>
-        <a href="#">PERSONAS</a>
-        <a href="#">PLANETAS</a>
-        <a href="#">ESPECIES</a>
-        <a href="#">NAVES ESPACIALES</a>
-        <a href="#">VEHICULOS</a>
+        <nav>
+          <a routerLink="historia">HISTORIA</a>
+          <a routerLink ="peliculas">PELICULAS</a>
+          <a routerLink ="personas">PERSONAS</a>
+          <a routerLink ="planetas">PLANETAS</a>
+          <a routerLink ="especies">ESPECIES</a>
+          <a routerLink ="naves-espaciales">NAVES ESPACIALES</a>
+          <a routerLink ="vehiculos">VEHICULOS</a>
+        </nav>
       </nav>
   </div>
 
