--- a/src/app/component/planetas/planetas.component.html
+++ b/src/app/component/planetas/planetas.component.html
@@ -1,1 +1,55 @@
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+ <!-- ****** Header Area Start ****** -->
+ <header class="header_area">
+  <div class="container">
+     <!-- Core Stylesheet -->
+     <link href="style.css" rel="stylesheet">
+      <div class="row">
+          <!-- Logo Area Start -->
+          <div class="col-12">
+            <div class="logo_area text-center">
+                <a href="#" class="star-logo">Star Wars</a>
+            </div>
+        </div>
+      </div>
+
+      <div class="row">
+          <div class="col-12">
+              <nav class="navbar navbar-expand-lg">
+                  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#starwars-nav" aria-controls="starwars-nav" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars" aria-hidden="true"></i> Menu</button>
+                  <!-- Menu Area Start -->
+                  <div class="collapse navbar-collapse justify-content-center">
+                      <ul class="navbar-nav" id="yummy-nav">
+                          <li class="nav-item active">
+                              <a class="nav-link" href="app-historia">Historia <span class="sr-only">(current)</span></a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="#">Peliculas</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="#">Personas</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="#">Planetas</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="#">Especies</a>
+                          </li>
+                          <li class="nav-item">
+                              <a class="nav-link" href="#">Naves Espaciales</a>
+                          </li>
+                          <li class="nav-item">
+                            <a class="nav-link" href="#">Vehiculos</a>
+                        </li>
+                      </ul>
+                  </div>
+              </nav>
+          </div>
+      </div>
+  </div>
+</header>
+<!-- ****** Header Area End ****** -->
 <p>planetas works!</p>
