--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -6,6 +6,7 @@
   </a>
       <nav>
         <nav>
+          <a routerLink = "integrantes-de-trabajo"> &nbsp;&nbsp;&nbsp;GRUPO DE <br>INTEGRANTES</a>
           <a routerLink="historia">HISTORIA</a>
           <a routerLink ="peliculas">PELICULAS</a>
           <a routerLink ="personas">PERSONAS</a>
