añadimos el html y el css para la pagina de grupo de integrantes,el html ya tiene algunos datos de cristhian cortes

--- a/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.html
+++ b/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.html
@@ -1,1 +1,31 @@
-<p>integrantes-de-trabajo works!</p>
+
+
+<div class="fondo1">
+  <div class="nombres">
+  <h1 class="color1">Nombres del <br> grupo de trabajo</h1>
+  <li>Cristhian Eduardo Cortes Martha</li>
+  <li>Nombres compañeros de trabajo "##"</li>
+  <li>Nombres compañeros de trabajo "##"</li>
+  <li>Nombres compañeros de trabajo "##"</li>
+</div>
+
+<div class=codigos>
+  <h1 class="color1">Codigo Institucional</h1>
+  <li># 18111027924</li>
+  <li># de codigo compañeros</li>
+  <li># de codigo compañeros</li>
+  <li># de codigo compañeros</li>
+</div>
+
+<div class="correos">
+  <h1 class="color1">Correo Institucional</h1>
+  <li>crcortes9@poligran.edu.co</li>
+  <li>## correo compañeros</li>
+  <li>## correo compañeros</li>
+  <li>## correo compañeros</li>
+</div>
+
+<div>
+  <h5>Politecnico Grancolombiano</h5>
+</div>
+</div>
