--- a/src/app/component/banner/banner.component.html
+++ b/src/app/component/banner/banner.component.html
@@ -1,18 +1,14 @@
 
- <div>
- <div class="banner">
+ <div class="banner" >
 
-  <h1 class="Letra1">STAR</h1>
-
- </div>
 
  <div >
-   <h3 class="Letra2">EL ASCENSO DE SKYWALKER</h3>
+
+  <h1 class="Letra1">STAR <br> <span>EL ASCENSO DE SKYWALKER</span> <br> WARS</h1>
+
  </div>
 
- <div>
-   <h2 class="Letra3">WARS</h2>
- </div>
+
 </div>
 
 
