--- a/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.html
+++ b/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.html
@@ -3,29 +3,30 @@
 <div class="fondo1">
   <div class="nombres">
   <h1 class="color1">Nombres del <br> grupo de trabajo</h1>
-  <li>Cristhian Eduardo Cortes Martha</li>
-  <li>Nombres compañeros de trabajo "##"</li>
-  <li>Nombres compañeros de trabajo "##"</li>
-  <li>Nombres compañeros de trabajo "##"</li>
+  <li> {{ _is.info.Nombreintegrante1}}</li>
+  <li >Nombres compañeros de trabajo "##"2</li>
+  <li>Nombres compañeros de trabajo "##"3</li>
+  <li>Nombres compañeros de trabajo "##"4</li>
 </div>
 
 <div class=codigos>
   <h1 class="color1">Codigo Institucional</h1>
-  <li># 18111027924</li>
-  <li># de codigo compañeros</li>
-  <li># de codigo compañeros</li>
-  <li># de codigo compañeros</li>
+  <li>{{ _is.info.Codigoinstitucionalintegrante1}}</li>
+  <li># de codigo compañeros2</li>
+  <li># de codigo compañeros3</li>
+  <li># de codigo compañeros4</li>
 </div>
 
 <div class="correos">
   <h1 class="color1">Correo Institucional</h1>
-  <li>crcortes9@poligran.edu.co</li>
-  <li>## correo compañeros</li>
-  <li>## correo compañeros</li>
-  <li>## correo compañeros</li>
+  <li>{{ _is.info.emailinstitucionalintegrante1}}</li>
+  <li>{{ _is.info.emailinstitucionalintegrante2}}</li>
+  <li>## correo compañeros3</li>
+  <li>## correo compañeros4</li>
 </div>
 
 <div>
-  <h5>Politecnico Grancolombiano</h5>
+  <h5>{{ _is.info.universidad}}</h5>
+  <h6>{{ _is.info.carrera}}</h6>
 </div>
 </div>
