--- a/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.css
+++ b/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.css
@@ -31,7 +31,14 @@
 h5{
   text-align: center;
   color: white;
-  margin-top: 200px;
+  margin-top: 140px;
+  font-size: 20px;
+}
+
+h6{
+  text-align: center;
+  color: white;
+  margin-top: -30px;
   font-size: 20px;
 }
 
