--- a/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.html
+++ b/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.html
@@ -1,6 +1,6 @@
 
 
-<div class="fondo1">
+<div class="fondo1 animated fadeIn">
   <div class="nombres">
   <h1 class="color1">Nombres del <br> grupo de trabajo</h1>
   <li> {{ _is.info.Nombreintegrante1}}</li>
