Modificacion archivos JSON datos personales

--- a/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.html
+++ b/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.html
@@ -4,15 +4,15 @@
   <div class="nombres">
   <h1 class="color1">Nombres del <br> grupo de trabajo</h1>
   <li> {{ _is.info.Nombreintegrante1}}</li>
-  <li >Nombres compañeros de trabajo "##"2</li>
+  <li> {{ _is.info.Nombreintegrante2}}</li>
   <li>Nombres compañeros de trabajo "##"3</li>
   <li>Nombres compañeros de trabajo "##"4</li>
 </div>
 
 <div class=codigos>
   <h1 class="color1">Codigo Institucional</h1>
-  <li>{{ _is.info.Codigoinstitucionalintegrante1}}</li>
-  <li># de codigo compañeros2</li>
+  <li>{{ _is.info.Codigoinstitucionalintegrante1}}</li> 
+  <li>{{ _is.info.Codigoinstitucionalintegrante2}}</li>
   <li># de codigo compañeros3</li>
   <li># de codigo compañeros4</li>
 </div>
