se agrega estudiante tres a integrantes de trabajo

--- a/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.html
+++ b/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.html
@@ -5,7 +5,7 @@
   <h1 class="color1">Nombres del <br> grupo de trabajo</h1>
   <li> {{ _is.info.Nombreintegrante1}}</li>
   <li> {{ _is.info.Nombreintegrante2}}</li>
-  <li>Nombres compañeros de trabajo "##"3</li>
+  <li>{{_is.info.Nombreintegrante3}}</li>
   <li>Nombres compañeros de trabajo "##"4</li>
 </div>
 
@@ -13,7 +13,7 @@
   <h1 class="color1">Codigo Institucional</h1>
   <li>{{ _is.info.Codigoinstitucionalintegrante1}}</li> 
   <li>{{ _is.info.Codigoinstitucionalintegrante2}}</li>
-  <li># de codigo compañeros3</li>
+  <li>{{_is.info.Codigoinstitucionalintegrante3}}</li>
   <li># de codigo compañeros4</li>
 </div>
 
@@ -21,7 +21,7 @@
   <h1 class="color1">Correo Institucional</h1>
   <li>{{ _is.info.emailinstitucionalintegrante1}}</li>
   <li>{{ _is.info.emailinstitucionalintegrante2}}</li>
-  <li>## correo compañeros3</li>
+  <li>{{_is.info.emailinstitucionalintegrante3}}</li>
   <li>## correo compañeros4</li>
 </div>
 
