--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,10 +1,13 @@
-<p>footer works!</p>
+
+<div>
+  <p>footer works!</p>
 <footer class="footer bg-inverse text-center">
 <div class="container">
         <p class="text-red">
          &copy; Aqui va el footer
         </p>
-
 </div>
 
 </footer>
+</div>
+
