--- a/src/app/component/planetas/planetas.component.html
+++ b/src/app/component/planetas/planetas.component.html
@@ -1,2 +1,13 @@
 
 <p>planetas works!</p>
+<h1 style = "color: blue;">{{Titulo}}</h1>
+<h2>{{nombre}}</h2>
+<h2>{{periodo_rotacion}}</h2>
+<h2>{{periodo_orbital}}</h2>
+<h2>{{diameto}}</h2>
+<h2>{{clima}}</h2>
+<h2>{{gravedad}}</h2>
+<h2>{{terreno}}</h2>
+<h2>{{superficie_del_agua}}</h2>
+<h2>{{poblacion}}</h2>
+<h2>{{residentes}}</h2>
