--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,8 @@
 
   <!--<app-banner></app-banner>
   <app-historia></app-historia>
-  <app-vehiculos></app-vehiculos>-->
+  <app-vehiculos></app-vehiculos>
+  <app-planetas></app-planetas>-->
 
   <router-outlet></router-outlet>
   <app-footer></app-footer>
