--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,7 +4,8 @@
   <!--<app-banner></app-banner>
   <app-historia></app-historia>
   <app-vehiculos></app-vehiculos>
-  <app-planetas></app-planetas>-->
+  <app-planetas></app-planetas>
+  <app-personas></app-personas>-->
 
   <router-outlet></router-outlet>
   <app-footer></app-footer>
