--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,8 @@
   <app-historia></app-historia>
   <app-vehiculos></app-vehiculos>
   <app-planetas></app-planetas>
-  <app-personas></app-personas>-->
+  <app-personas></app-personas>
+  <app-naves-espaciales></app-naves-espaciales>-->
 
   <router-outlet></router-outlet>
   <app-footer></app-footer>
