--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,8 @@
   <app-vehiculos></app-vehiculos>
   <app-planetas></app-planetas>
   <app-personas></app-personas>
-  <app-naves-espaciales></app-naves-espaciales>-->
+  <app-naves-espaciales></app-naves-espaciales>
+  <app-peliculas></app-peliculas>-->
 
   <router-outlet></router-outlet>
   <app-footer></app-footer>
