Se agrega parte del código HTML de Naves espaciales

--- a/src/app/component/naves-espaciales/naves-espaciales.component.html
+++ b/src/app/component/naves-espaciales/naves-espaciales.component.html
@@ -1,2 +1,27 @@
+<html>
+<head>
+    <title>HTML de Naves espaciales</title>
+</head>
+<body>
+    <H1><center><strong>Naves espaciales Star Wars</strong></center> </H1>
 
-<p>naves-espaciales works!</p>
+    <p> En este lugar encontrarás las espactacuñares naves que 
+        encontrarás en las películas de Star Wars, solamente debes pulsar en el nombre de la
+       nave.
+    </p>
+
+    <lo>
+        <li>Sand Crawler</li>
+        <li>T-16 skyhopper</li>
+        <li>X-34 landspeeder</li>
+        <li>TIE/LN starfighter</li>
+        <li>TIE bomber</li>
+        <li>AT-AT</li>
+        <li>AT-ST</li>
+        <li>SStorm IV Twin-Pod cloud car</li>
+        <li>Sail barge</li>
+    </lo>
+
+</body>
+
+</html>
