--- a/src/app/component/especies/especies.component.html
+++ b/src/app/component/especies/especies.component.html
@@ -1,2 +1,13 @@
 
-<p>especies works!</p>
+<html>
+<head>
+<title>Especies Star Wars</title>
+</head>
+<body>
+    <h1>Especies de Star Wars</h1>
+<p>Podrás encontrar todas las especies y sus características que se encuentra en la saga</p>
+
+</body>
+
+</html>
+>
