--- a/src/app/component/peliculas/peliculas.component.html
+++ b/src/app/component/peliculas/peliculas.component.html
@@ -1,12 +1,1 @@
-
-<p>peliculas works!</p>
-<h1 style = "color: blue;">{{Titulo}}</h1>
-<h2>{{titulo}}</h2>
-<h2>{{episodio_id}}</h2>
-<h2>{{rastreo de apertura}}</h2>
-<h2>{{dierctor}}</h2>
-<h2>{{producido}}</h2>
-<h2>{{fecha_de_lanzamiento}}</h2>
-<h2>{{caracteres}}</h2>
-  
-}
+<p>Peliculas</p>
