--- a/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.html
+++ b/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.html
@@ -6,7 +6,7 @@
   <li> {{ _is.info.Nombreintegrante1}}</li>
   <li> {{ _is.info.Nombreintegrante2}}</li>
   <li>{{ _is.info.Nombreintegrante4}}</li>
-  <li>Nombres compañeros de trabajo "##"4</li>
+  <li>{{}}##"4</li>
 </div>
 
 <div class=codigos>
@@ -22,7 +22,7 @@
   <li>{{ _is.info.emailinstitucionalintegrante1}}</li>
   <li>{{ _is.info.emailinstitucionalintegrante2}}</li>
   <li>{{_is.info.emailinstitucionalintegrante4}}</li>
-  <li>## correo compañeros4</li>
+  <li>{{_is.info.emailinstitucionalintegrante3}}</li>
 </div>
 
 <div>
