ingreso código participantes uno

--- a/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.html
+++ b/src/app/component/integrantes-de-trabajo/integrantes-de-trabajo.component.html
@@ -6,7 +6,7 @@
   <li> {{ _is.info.Nombreintegrante1}}</li>
   <li> {{ _is.info.Nombreintegrante2}}</li>
   <li>{{ _is.info.Nombreintegrante4}}</li>
-  <li>{{}}##"4</li>
+  <li>{{_is.info.Nombreintegrante3}}</li>
 </div>
 
 <div class=codigos>
@@ -14,7 +14,7 @@
   <li>{{ _is.info.Codigoinstitucionalintegrante1}}</li>
   <li>{{ _is.info.Codigoinstitucionalintegrante2}}</li>
   <li>{{_is.info.Codigoinstitucionalintegrante4}}</li>
-  <li># de codigo compañeros4</li>
+  <li>{{_is.info.Codigoinstitucionalintegrante3}}</li>
 </div>
 
 <div class="correos">
