--- a/src/app/component/historia/historia.component.html
+++ b/src/app/component/historia/historia.component.html
@@ -19,12 +19,21 @@
 
   <lo>
   <li><h3>Star Wars: Episodio IV - Una nueva esperanza (1977)</h3></li>
-  <p>
-La primera película de la serie, , contó con actores como Mark Hamill, Harrison Ford, Carrie Fisher, Alec Guinness, Anthony Daniels, Kenny Baker, Peter Mayhew y David Prowse. Aunque tuvo numerosas dificultades durante la producción, 20th Century Fox se encargó de su distribución y su estreno tuvo lugar el 25 de mayo de 1977.6​ Se convirtió en un fenómeno de la cultura popular y su influencia ha sido reconocida por numerosos cineastas. Tal éxito hizo que Lucas financiara dos secuelas más que completaron la denominada «trilogía original»
+  <p>La primera película de la serie, , contó con actores como Mark Hamill, Harrison Ford, Carrie Fisher, Alec Guinness, Anthony Daniels, Kenny Baker, Peter Mayhew y David Prowse. Aunque tuvo numerosas dificultades durante la producción, 20th Century Fox se encargó de su distribución y su estreno tuvo lugar el 25 de mayo de 1977.6​ Se convirtió en un fenómeno de la cultura popular y su influencia ha sido reconocida por numerosos cineastas. Tal éxito hizo que Lucas financiara dos secuelas más que completaron la denominada «trilogía original»
   </p>
   
+  <li><h3>Star Wars: Episodio V - El Imperio contraataca</h3></li>
+
+  <p>Es una película del género space opera dirigida por Irvin Kershner y estrenada por primera vez en 
+    Estados Unidos el 21 de mayo de 1980. El guion, basado en una historia de George Lucas, fue escrito 
+    por Lawrence Kasdan y Leigh Brackett. Aunque en términos cronológicos internos sea la quinta película 
+    de la saga Star Wars, en realidad fue la segunda película de la saga en ser estrenada. 
+    Se incorporaron actores como Billy Dee Williams, Frank Oz e Ian McDiarmid.7​
+
+  </p>
   <p>
-   Star Wars: Episodio V - El Imperio contraataca y Star Wars: Episode VI - Return of the Jedi, a las que se incorporaron actores como Billy Dee Williams, Frank Oz e Ian McDiarmid.7​
+   Star Wars: Episodio V - El Imperio contraataca y Star Wars: Episode VI - Return of the Jedi, a las que 
+   se incorporaron actores como Billy Dee Williams, Frank Oz e Ian McDiarmid.7​
 
 Más de una década después se estrenó Star Wars: Episodio I - La amenaza fantasma (1999), la primera cinta de una nueva trilogía de precuelas completada por Star Wars: Episodio II - El ataque de los clones (2002) y Star Wars: Episodio III - La venganza de los Sith (2005) y centradas en los años previos a la anterior. Liam Neeson, Ewan McGregor, Natalie Portman, Hayden Christensen y Samuel L. Jackson fueron algunos de los actores que se sumaron al reparto en el que también participaron algunos actores de la trilogía original. A finales de 2012 Disney adquirió Lucasfilm, productora de las seis películas anteriores,9​ y anunció la realización de una tercera trilogía cinematográfica integrada por Star Wars: Episodio VII - El despertar de la Fuerza (2015), Star Wars: Episodio VIII - Los últimos Jedi (2017) y Star Wars: Episodio IX - El ascenso de Skywalker (2019), en la que nuevamente participó parte del elenco original junto con actores como Daisy Ridley, Adam Driver, John Boyega y Oscar Isaac. Asimismo el estudio es responsable de la producción de un par de películas derivadas que abordan elementos del canon como son Rogue One (2016) y Han Solo (2018).
 
