--- a/src/app/component/historia/historia.component.html
+++ b/src/app/component/historia/historia.component.html
@@ -11,7 +11,12 @@
 <div>
   <hr/>
   <p>
-    Star Wars (conocida también en español como La guerra de las galaxias) es una franquicia compuesta primordialmente de una serie de películas concebidas por el cineasta estadounidense George Lucas en la década de 1970, y producidas y distribuidas por The Walt Disney Company a partir de 2012. Su trama describe las vivencias de un grupo de personajes que habitan en una galaxia ficticia e interactúan con elementos como «la Fuerza», un campo de energía metafísico y omnipresente4​ que posee un «lado oscuro» provocado por la ira, el miedo y el odio.​
+    Star Wars (conocida también en español como La guerra de las galaxias) es una franquicia compuesta 
+    primordialmente de una serie de películas concebidas por el cineasta estadounidense George Lucas en la 
+    década de 1970, y producidas y distribuidas por The Walt Disney Company a partir de 2012. Su trama 
+    describe las vivencias de un grupo de personajes que habitan en una galaxia ficticia e interactúan con 
+    elementos como «la Fuerza», un campo de energía metafísico y omnipresente4​ que posee un «lado oscuro» 
+    provocado por la ira, el miedo y el odio.​
   </p>
   <hr/>
 
@@ -28,14 +33,44 @@
     Estados Unidos el 21 de mayo de 1980. El guion, basado en una historia de George Lucas, fue escrito 
     por Lawrence Kasdan y Leigh Brackett. Aunque en términos cronológicos internos sea la quinta película 
     de la saga Star Wars, en realidad fue la segunda película de la saga en ser estrenada. 
-    Se incorporaron actores como Billy Dee Williams, Frank Oz e Ian McDiarmid.7​
-
+    Se incorporaron actores como Billy Dee Williams, Frank Oz e Ian McDiarmid.
   </p>
-  <p>
-   Star Wars: Episodio V - El Imperio contraataca y Star Wars: Episode VI - Return of the Jedi, a las que 
-   se incorporaron actores como Billy Dee Williams, Frank Oz e Ian McDiarmid.7​
 
-Más de una década después se estrenó Star Wars: Episodio I - La amenaza fantasma (1999), la primera cinta de una nueva trilogía de precuelas completada por Star Wars: Episodio II - El ataque de los clones (2002) y Star Wars: Episodio III - La venganza de los Sith (2005) y centradas en los años previos a la anterior. Liam Neeson, Ewan McGregor, Natalie Portman, Hayden Christensen y Samuel L. Jackson fueron algunos de los actores que se sumaron al reparto en el que también participaron algunos actores de la trilogía original. A finales de 2012 Disney adquirió Lucasfilm, productora de las seis películas anteriores,9​ y anunció la realización de una tercera trilogía cinematográfica integrada por Star Wars: Episodio VII - El despertar de la Fuerza (2015), Star Wars: Episodio VIII - Los últimos Jedi (2017) y Star Wars: Episodio IX - El ascenso de Skywalker (2019), en la que nuevamente participó parte del elenco original junto con actores como Daisy Ridley, Adam Driver, John Boyega y Oscar Isaac. Asimismo el estudio es responsable de la producción de un par de películas derivadas que abordan elementos del canon como son Rogue One (2016) y Han Solo (2018).
+  <li><h3>Star Wars: Episode VI - Return of the Jedi</h3></li>
+  
+  <p>
+  Es una película de space opera estrenada el 25 de mayo de 1983 y dirigida por Richard Marquand. Fue la 
+  tercera película estrenada de la saga Star Wars y la sexta en términos de cronología interna de la saga. De 
+  la trilogía original fue la película más criticada, ya que mucha gente la consideraba la más infantil por la
+  inclusión de los ewoks. Aun así fue aclamada por la mayoría de la gente, que la consideraron una gran 
+  conclusión para la saga.
+  </p>
+
+  <li><h3>Star Wars: Episodio I - La amenaza fantasma (1999)</h3></li>
+
+  <p>
+    Es una película de space operan. 2​ de 1999, escrita y dirigida por el director de cine estadounidense 
+    George Lucas. Es la cuarta entrega de la saga Star Wars y la primera en el orden cronológico de la misma, 
+    después de un paréntesis de veintidós años del lanzamiento de Una nueva esperanza.
+  </p>
+
+  <li><h3>Star Wars: Episodio II - El ataque de los clones (2002)</h3></li>
+  
+  <p> es una película de space operan. 1​ dirigida por el cineasta estadounidense George Lucas y escrita por él 
+  mismo y Jonathan Hales. Fue la quinta película estrenada de la saga Star Wars y la segunda en términos de 
+  cronología interna.</p>
+
+  <p> 
+    y Star Wars: Episodio III - La venganza de los Sith (2005) y centradas en los años previos a la 
+    anterior. Liam Neeson, Ewan McGregor, Natalie Portman, Hayden Christensen y Samuel L. Jackson fueron 
+    algunos de los actores que se sumaron al reparto en el que también participaron algunos actores de la 
+    trilogía original. A finales de 2012 Disney adquirió Lucasfilm, productora de las seis películas 
+    anteriores,9​ y anunció la realización de una tercera trilogía cinematográfica integrada por Star Wars: 
+    Episodio VII - El despertar de la Fuerza (2015), Star Wars: Episodio VIII - Los últimos Jedi (2017) y Star
+    Wars: Episodio IX - El ascenso de Skywalker (2019), en la que nuevamente participó parte del elenco 
+    original junto con actores como Daisy Ridley, Adam Driver, John Boyega y Oscar Isaac. Asimismo el estudio
+     es responsable de la producción de un par de películas derivadas que abordan elementos del canon como son 
+     Rogue One (2016) y Han Solo (2018).
 
 Además del ámbito cinematográfico, la franquicia incluye una amplia variedad de productos tales como novelas, series de televisión, videojuegos, historietas, atracciones de parques temáticos, juegos de rol, de guerra o de miniaturas y juguetes, que componen una parte importante del conocido como «universo expandido» de Star Wars. Cada año la marca genera ingresos por la venta de sus productos en todo el mundo que ascienden a más de 24 mil millones USD,10​ lo que la convierte en una de las más exitosas de todos los tiempos, mientras que las recaudaciones de sus películas la posicionan como una de las series más taquilleras en la historia del cine.
 
