Modificamos algunos elementos de el html y centrmos los titulos

--- a/src/app/component/especies/especies.component.html
+++ b/src/app/component/especies/especies.component.html
@@ -3,11 +3,11 @@
 <head>
 <title>Especies Star Wars</title>
 </head>
-<body>
+<div class="center">
     <h1>Especies de Star Wars</h1>
 <p>Podrás encontrar todas las especies y sus características que se encuentra en la saga</p>
+</div>
 
-</body>
 
 </html>
 >
