--- a/src/app/component/naves-espaciales/naves-espaciales.component.html
+++ b/src/app/component/naves-espaciales/naves-espaciales.component.html
@@ -1,19 +1,1 @@
-<html>
-<head>
-    <title>HTML de Naves espaciales</title>
-</head>
-<body>
-    <H1><center><strong>Naves espaciales Star Wars</strong></center> </H1>
-
-<p>naves-espaciales works!</p>
-<h1 style = "color: blue;">{{Titulo}}</h1>
-<h2>{{nombre}}</h2>
-<h2>{{modelo}}</h2>
-<h2>{{costo_en_créditos}}</h2>
-<h2>{{velocidad_máxima_de_atmósfera}}</h2>
-<h2>{{Capacidad_de_carga}}</h2>
-<h2>{{calificación_de_hiperimpulsor}}</h2>
-<h2>{{MGLT}}</h2>
-<h2>{{nave_clase}}</h2>
-<h2>{{pilotos}}</h2>
-<h2>{{peliculas}}</h2>
+<p>Naves espaciales</p>
