--- a/src/app/component/historia/historia.component.html
+++ b/src/app/component/historia/historia.component.html
@@ -9,6 +9,8 @@
 <br>
 
 <div class="colores">
+
+  <p>cORRECION </p>
   <hr/>
   <p>
     Star Wars (conocida también en español como La guerra de las galaxias) es una franquicia compuesta
