--- a/src/app/component/personas/personas.component.html
+++ b/src/app/component/personas/personas.component.html
@@ -1,3 +1,22 @@
 
 <p>personas works!</p>
 
+<h1>Consumo Api Rest</h1>
+<h1 style="color: red;">ESTA SERIA LA INFORMACION DE LAS PERSONAS</h1>
+
+<h2>Nuestra info traida desde los servicios</h2>
+
+<div *ngFor = "let Personas of ListaDePersonas">
+
+      <h3 style="color: red;"> {{Personas.name}}</h3>
+      <h4 style="color: blue;">{{Personas.height}}</h4>
+       <h4>{{Personas.mass}}</h4>
+       <h5>{{Personas.hair_color}}</h5>
+      <h6 style="color: chocolate;">{{Personas.skin_color}}</h6>
+      <h6 style="color: cyan;">{{Personas.eye_color}}</h6>
+      <h6 style="color: cyan;">{{Personas.birth_year}}</h6>
+      <h6 style="color: cyan;">{{Personas.gender}}</h6>
+      <h6 style="color: cyan;">{{Personas.homeworld}}</h6>
+
+
+</div>
