--- a/src/app/component/planetas/planetas.component.html
+++ b/src/app/component/planetas/planetas.component.html
@@ -1,2 +1,22 @@
 
 <p>planetas works!</p>
+
+<h1>Consumo Api Rest</h1>
+<h1 style="color: red;">ESTA SERIA LA INFORMACION DE LAS PLANETAS</h1>
+
+<h2>Nuestra info traida desde los servicios</h2>
+
+<div *ngFor = "let Planetas of ListaDePlanetas">
+
+      <h3 style="color: red;"> {{Planetas.name}}</h3>
+      <h4 style="color: blue;">{{Planetas.rotation_period}}</h4>
+      <h4>{{Planetas.orbital_period}}</h4>
+      <h5>{{Planetas.diameter}}</h5>
+      <h6 style="color: chocolate;">{{Planetas.climate}}</h6>
+      <h6 style="color: cyan;">{{Planetas.gravity}}</h6>
+      <h6 style="color: cyan;">{{Planetas.terrain}}</h6>
+      <h6 style="color: cyan;">{{Planetas.surface_water}}</h6>
+      <h6 style="color: cyan;">{{Planetas.populatio}}</h6>
+
+
+</div>
