--- a/src/app/component/naves-espaciales/naves-espaciales.component.html
+++ b/src/app/component/naves-espaciales/naves-espaciales.component.html
@@ -1,1 +1,24 @@
 <p>Naves espaciales</p>
+
+<h1>Consumo Api Rest</h1>
+<h1 style="color: red;">ESTA SERIA LA INFORMACION DE LAS NAVES</h1>
+
+<h2>Nuestra info traida desde los servicios</h2>
+
+<div *ngFor = "let naves of ListaDeNaves">
+
+      <h3 style="color: red;">PELICULA: {{naves.name}}</h3>
+      <h4 style="color: blue;">{{naves.model}}</h4>
+      <h4>{{naves.manofacture}}</h4>
+      <h5>{{naves.cost_in_credits}}</h5>
+      <h6 style="color: chocolate;">{{naves.length}}</h6>
+      <h6 style="color: cyan;">{{naves.crew}}</h6>
+      <h6 style="color: cyan;">{{naves.passengers}}</h6>
+      <h6 style="color: cyan;">{{naves.cargo_capacity}}</h6>
+      <h6 style="color: cyan;">{{naves.consumables}}</h6>
+      <h6 style="color: cyan;">{{naves.hyperdrive_rating}}</h6>
+      <h6 style="color: cyan;">{{naves.mglt}}</h6>
+      <h6 style="color: cyan;">{{naves.starship_class}}</h6>
+
+
+</div>
