conecto el api en la pagina de vehiculos para finalizar la conexion de el API REST con la Aplicacion,falta el diseño

--- a/src/app/component/vehiculos/vehiculos.component.html
+++ b/src/app/component/vehiculos/vehiculos.component.html
@@ -1,5 +1,26 @@
+<h1>Consumo Api Rest</h1>
+<h1 style="color: red;">ESTA SERIA LA INFORMACION DE LAS PELICULAS</h1>
+
+<h2>Nuestra info traida desde los servicios</h2>
+
+<div *ngFor = "let vehiculos of ListaDeVehiculos">
+
+      <h3 style="color: red;">{{vehiculos.name}}</h3>
+      <h4 style="color: blue;">{{vehiculos.model}}</h4>
+      <h4>{{vehiculos.manufacturer}}</h4>
+      <h5>{{vehiculos.cost_in_credits}}</h5>
+      <h6 style="color: chocolate;">{{vehiculos.length}}</h6>
+      <h6 style="color: cyan;">{{vehiculos.max_atmosphering_speed}}</h6>
+      <h5>{{vehiculos.crew}}</h5>
+      <h5>{{vehiculos.passengers}}</h5>
+      <h5>{{vehiculos.cargo_capacity}}</h5>
+      <h5>{{vehiculos.consumables}}</h5>
+      <h5>{{vehiculos.vehicle_class}}</h5>
+      <h5>{{vehiculos.edited}}</h5>
+      <h5>{{vehiculos.created}}</h5>
+      <h5>{{vehiculos.url}}</h5>
 
 
-<h1>App Vehicles</h1>
-<h2>Muestra la informacion</h2>
 
+
+</div>
