--- a/src/app/component/vehiculos/vehiculos.component.html
+++ b/src/app/component/vehiculos/vehiculos.component.html
@@ -1,5 +1,5 @@
 <h1>Consumo Api Rest</h1>
-<h1 style="color: red;">ESTA SERIA LA INFORMACION DE LAS PELICULAS</h1>
+<h1 style="color: red;">ESTA SERIA LA INFORMACION DE LAS VEHICULOS</h1>
 
 <h2>Nuestra info traida desde los servicios</h2>
 
