--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,4 +1,4 @@
-<header>
+<!-- <header>
   <div class="wrapper">
       <a routerLink="/">
     <div class="logo">Star Wars <br> &nbsp; &nbsp; App</div>
@@ -16,4 +16,60 @@
         </nav>
       </nav>
   </div>
+</header>
+
+
+
+
+---------------------app-integrantes-de-trabajo. -->
+
+<header>
+
+  <input type="checkbox" id="btn-menu">
+  <label for="btn-menu">Menu</label>
+
+<nav ngbNav #nav="ngbNav" class="nav-tabs">
+  <ng-container ngbNavItem>
+    <a routerLink="/" ngbNavLink>INICIO</a>
+    <ng-template ngbNavContent>
+    </ng-template>
+  </ng-container>
+  <ng-container ngbNavItem>
+    <a routerLink ="historia" ngbNavLink >HISTORIA</a>
+    <ng-template ngbNavContent>
+    </ng-template>
+  </ng-container>
+  <ng-container ngbNavItem>
+    <a routerLink ="personas" ngbNavLink>PERSONAS</a>
+    <ng-template ngbNavContent>
+    </ng-template>
+  </ng-container>
+  <ng-container ngbNavItem>
+    <a routerLink ="planetas" ngbNavLink>PLANETAS</a>
+    <ng-template ngbNavContent>
+    </ng-template>
+  </ng-container>
+  <ng-container ngbNavItem>
+    <a routerLink ="especies" ngbNavLink>ESPECIES</a>
+    <ng-template ngbNavContent>
+    </ng-template>
+  </ng-container>
+  <ng-container ngbNavItem>
+    <a routerLink ="naves-espaciales" ngbNavLink>NAVES ESPACIALES</a>
+    <ng-template ngbNavContent>
+    </ng-template>
+  </ng-container>
+  <ng-container ngbNavItem>
+    <a routerLink ="vehiculos" ngbNavLink>VEHICULOS</a>
+    <ng-template ngbNavContent>
+    </ng-template>
+  </ng-container>
+  <ng-container ngbNavItem>
+    <a routerLink = "integrantes-de-trabajo" ngbNavLink >INTEGRANTES DE TRABAJO</a>
+    <ng-template ngbNavContent>
+    </ng-template>
+  </ng-container>
+</nav>
+<div [ngbNavOutlet]="nav" class="mt-2"></div>
+
 </header>
