Ajustamos el menu responsivo,falta las demas paginas

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,7 +10,7 @@
   <app-peliculas></app-peliculas>-->
 
   <router-outlet></router-outlet>
-  <app-footer></app-footer>
+  <!--<app-footer></app-footer>-->
 
 
 
