--- a/src/app/component/banner/banner.component.html
+++ b/src/app/component/banner/banner.component.html
@@ -1,15 +1,12 @@
 
- <div class="banner animated fadeIn" >
+ <div class="banner">
 
-
- <div >
-
-  <h1 class="Letra1">STAR <br> <span>EL ASCENSO DE SKYWALKER</span> <br> WARS</h1>
+  <h1 >STAR <br> <span>EL ASCENSO DE SKYWALKER</span> <br> WARS</h1>
 
  </div>
 
 
-</div>
+
 
 
 
