--- a/src/app/component/header/header.component.html
+++ b/src/app/component/header/header.component.html
@@ -1,12 +1,15 @@
  <header>
+
    <input type="checkbox" id="btn-menu">
    <label for="btn-menu"><img src="https://pngimage.net/wp-content/uploads/2018/06/responsive-menu-icon-png-.png" alt=""></label>
 
 
 
 
+
       <nav class="menu">
           <ul>
+
             <li><a routerLink="/">INICIO</a></li>
             <li><a routerLink="historia">HISTORIA</a></li>
             <li><a routerLink ="peliculas">PELICULAS</a></li>
@@ -25,7 +28,7 @@
 
 
 <!--
----------------------app-integrantes-de-trabajo.
+---------------------Header hecho con bootstrap.
 
 <header>
 
