--- a/src/app/component/historia/historia.component.html
+++ b/src/app/component/historia/historia.component.html
@@ -1,17 +1,15 @@
 
-<div class="fondo animated fadeIn">
-<p class="home">Home - Historia</p>
+
+
+
+
+<div class="fondo">
+  <div class="color">
+  <br>
+    <h1>HISTORIA</h1>
 <br>
-
-  <div>
-     <h1>HISTORIA</h1>
-</div>
-<br>
-
-<div class="colores">
-
-  <p>cORRECION </p>
   <hr/>
+
   <p>
     Star Wars (conocida también en español como La guerra de las galaxias) es una franquicia compuesta
     primordialmente de una serie de películas concebidas por el cineasta estadounidense George Lucas en la
@@ -22,18 +20,46 @@
   </p>
 
 
-  <h2><strong>Películas</strong></h2>
+  <h1><ul> Películas </ul></h1>
 
+<h3><li>Star Wars: Episodio I - La amenaza fantasma </li></h3>
 
-
-  <li><h3>Star Wars: Episodio IV - Una nueva esperanza (1977)</h3></li>
-  <p>La primera película de la serie, , contó con actores como Mark Hamill, Harrison Ford, Carrie Fisher, Alec Guinness, Anthony Daniels, Kenny Baker, Peter Mayhew y David Prowse. Aunque tuvo numerosas dificultades durante la producción, 20th Century Fox se encargó de su distribución y su estreno tuvo lugar el 25 de mayo de 1977.6​ Se convirtió en un fenómeno de la cultura popular y su influencia ha sido reconocida por numerosos cineastas. Tal éxito hizo que Lucas financiara dos secuelas más que completaron la denominada «trilogía original»
+  <p>
+    Es una película de space operan. 2​ de 1999, escrita y dirigida por el director de cine estadounidense
+    George Lucas. Es la cuarta entrega de la saga Star Wars y la primera en el orden cronológico de la misma,
+    después de un paréntesis de veintidós años del lanzamiento de Una nueva esperanza.
   </p>
 
-  <li><h3>Star Wars: Episodio V - El Imperio contraataca</h3></li>
+ <h3><li>Star Wars: Episodio II - El ataque de los clones </li></h3>
+
+  <p> es una película de space operan. 1​ dirigida por el cineasta estadounidense George Lucas y escrita por él
+  mismo y Jonathan Hales. Fue la quinta película estrenada de la saga Star Wars y la segunda en términos de
+  cronología interna.</p>
+
+  <h3><li>Star Wars: Episodio III - La venganza de los Sith </li></h3>
+
+  <p>
+    Centradas en los años previos a la anterior. Liam Neeson, Ewan McGregor, Natalie Portman, Hayden
+    Christensen y Samuel L. Jackson fueron algunos de los actores que se sumaron al reparto en el que también
+    participaron algunos actores de la trilogía original. a finales de 2012 Disney adquirió Lucasfilm,
+    productora de las seis películas anteriores, anunció la realización de una tercera trilogía
+    cinematográfica
+  </p>
 
 
-    <h3><li>Star Wars: Episodio IV - Una nueva esperanza (1977)</li></h3>
+  <p>
+     Star Wars: Episodio III - La venganza de los Sith y centradas en los años previos a la
+    anterior. Liam Neeson, Ewan McGregor, Natalie Portman, Hayden Christensen y Samuel L. Jackson fueron
+    algunos de los actores que se sumaron al reparto en el que también participaron algunos actores de la
+    trilogía original. A finales de 2012 Disney adquirió Lucasfilm, productora de las seis películas
+    anteriores,9​ y anunció la realización de una tercera trilogía cinematográfica integrada por Star Wars:
+    Episodio VII - El despertar de la Fuerza (2015), Star Wars: Episodio VIII - Los últimos Jedi (2017) y Star
+    Wars: Episodio IX - El ascenso de Skywalker (2019), en la que nuevamente participó parte del elenco
+    original junto con actores como Daisy Ridley, Adam Driver, John Boyega y Oscar Isaac. Asimismo el estudio
+     es responsable de la producción de un par de películas derivadas que abordan elementos del canon como son
+     Rogue One (2016) y Han Solo (2018).
+
+  <h3><li>Star Wars: Episodio IV - Una nueva esperanza </li></h3>
   <p>La primera película de la serie, , contó con actores como Mark Hamill, Harrison Ford, Carrie Fisher, Alec Guinness, Anthony Daniels, Kenny Baker, Peter Mayhew y David Prowse. Aunque tuvo numerosas dificultades durante la producción, 20th Century Fox se encargó de su distribución y su estreno tuvo lugar el 25 de mayo de 1977.6​ Se convirtió en un fenómeno de la cultura popular y su influencia ha sido reconocida por numerosos cineastas. Tal éxito hizo que Lucas financiara dos secuelas más que completaron la denominada «trilogía original»
   </p>
 
@@ -48,11 +74,7 @@
   </p>
 
 
-  <li><h3>Star Wars: Episode VI - Return of the Jedi</h3></li>
-
-
   <h3><li>Star Wars: Episode VI - Return of the Jedi</li></h3>
-
 
   <p>
   Es una película de space opera estrenada el 25 de mayo de 1983 y dirigida por Richard Marquand. Fue la
@@ -62,54 +84,12 @@
   conclusión para la saga.
   </p>
 
-  <h3><li>Star Wars: Episodio I - La amenaza fantasma (1999)</li></h3>
-
-  <p>
-    Es una película de space operan. 2​ de 1999, escrita y dirigida por el director de cine estadounidense
-    George Lucas. Es la cuarta entrega de la saga Star Wars y la primera en el orden cronológico de la misma,
-    después de un paréntesis de veintidós años del lanzamiento de Una nueva esperanza.
-  </p>
 
 
-  <li><h3>Star Wars: Episodio II - El ataque de los clones (2002)</h3></li>
 
-  <p> es una película de space operan. 1​ dirigida por el cineasta estadounidense George Lucas y escrita por él
-  mismo y Jonathan Hales. Fue la quinta película estrenada de la saga Star Wars y la segunda en términos de
-  cronología interna.</p>
 
-  <p>
-    y Star Wars: Episodio III - La venganza de los Sith (2005) y centradas en los años previos a la
-    anterior. Liam Neeson, Ewan McGregor, Natalie Portman, Hayden Christensen y Samuel L. Jackson fueron
-    algunos de los actores que se sumaron al reparto en el que también participaron algunos actores de la
-    trilogía original. A finales de 2012 Disney adquirió Lucasfilm, productora de las seis películas
-    anteriores,9​ y anunció la realización de una tercera trilogía cinematográfica integrada por Star Wars:
-    Episodio VII - El despertar de la Fuerza (2015), Star Wars: Episodio VIII - Los últimos Jedi (2017) y Star
-    Wars: Episodio IX - El ascenso de Skywalker (2019), en la que nuevamente participó parte del elenco
-    original junto con actores como Daisy Ridley, Adam Driver, John Boyega y Oscar Isaac. Asimismo el estudio
-     es responsable de la producción de un par de películas derivadas que abordan elementos del canon como son
-     Rogue One (2016) y Han Solo (2018).
 
-Además del ámbito cinematográfico, la franquicia incluye una amplia variedad de productos tales como novelas, series de televisión, videojuegos, historietas, atracciones de parques temáticos, juegos de rol, de guerra o de miniaturas y juguetes, que componen una parte importante del conocido como «universo expandido» de Star Wars. Cada año la marca genera ingresos por la venta de sus productos en todo el mundo que ascienden a más de 24 mil millones USD,10​ lo que la convierte en una de las más exitosas de todos los tiempos, mientras que las recaudaciones de sus películas la posicionan como una de las series más taquilleras en la historia del cine.
-
-También existe una serie de televisión (live action) llamada The Mandalorian (2019-) y otras series animadas como Star Wars: Clone Wars (2003-2005), Star Wars: The Clone Wars (2008-2014), Star Wars Rebels (2014-2018), Star Wars Resistence (2018-), Star Wars: Forces of Destiny (2017-2019) y Star Wars: Galaxy of Adventures (2018- 2019).
-
-  <h3><li>Star Wars: Episodio II - El ataque de los clones (2002)</li></h3>
-
-  <p> es una película de space operan. 1​ dirigida por el cineasta estadounidense George Lucas y escrita por él
-  mismo y Jonathan Hales. Fue la quinta película estrenada de la saga Star Wars y la segunda en términos de
-  cronología interna.</p>
-
-  <h3><li>y Star Wars: Episodio III - La venganza de los Sith (2005)</li></h3>
-
-  <p>
-    Centradas en los años previos a la anterior. Liam Neeson, Ewan McGregor, Natalie Portman, Hayden
-    Christensen y Samuel L. Jackson fueron algunos de los actores que se sumaron al reparto en el que también
-    participaron algunos actores de la trilogía original. a finales de 2012 Disney adquirió Lucasfilm,
-    productora de las seis películas anteriores, anunció la realización de una tercera trilogía
-    cinematográfica
-  </p>
-
-  <h3><li>Episodio VII - El despertar de la Fuerza (2015)</li></h3>
+  <h3><li>Episodio VII - El despertar de la Fuerza </li></h3>
 
   <p>Es la séptima entrega de la saga Star Wars, atendiendo tanto a la fecha de estrenonota 1​ como a la
     cronología interna de la serie, pues transcurre unos 30 años después del sexto episodio, Return of the Jedi
@@ -119,7 +99,7 @@ También existe una serie de televisión (live action) llamada The Mandalorian (
     lucha de Rey, Finn y Poe Dameron con la Resistencia, liderada por veteranos de la Alianza Rebelde, contra
     Kylo Ren y la Primera Orden, surgida a partir del Imperio Galáctico.</p>
 
-    <h3><li>Episodio VIII - Los últimos Jedi (2017)</li></h3>
+    <h3><li>Episodio VIII - Los últimos Jedi </li></h3>
 
     <P>
       Es la octava entrega de la saga Star Wars cronológicamente (de acuerdo a la historia principal), y la
@@ -153,4 +133,5 @@ También existe una serie de televisión (live action) llamada The Mandalorian (
 
   </p>
 
+</div>
 </div>
