--- a/src/app/component/personas/personas.component.html
+++ b/src/app/component/personas/personas.component.html
@@ -1,22 +1,48 @@
-
-<p>personas works!</p>
-
-<h1>Consumo Api Rest</h1>
-<h1 style="color: red;">ESTA SERIA LA INFORMACION DE LAS PERSONAS</h1>
-
-<h2>Nuestra info traida desde los servicios</h2>
+<div class="fondo">
+<div class="container">   
+<h1 style="color: yellow;">Personajes Star Wars</h1>
 
 <div *ngFor = "let Personas of ListaDePersonas">
-
-      <h3 style="color: red;"> {{Personas.name}}</h3>
-      <h4 style="color: blue;">{{Personas.height}}</h4>
-       <h4>{{Personas.mass}}</h4>
-       <h5>{{Personas.hair_color}}</h5>
-      <h6 style="color: chocolate;">{{Personas.skin_color}}</h6>
-      <h6 style="color: cyan;">{{Personas.eye_color}}</h6>
-      <h6 style="color: cyan;">{{Personas.birth_year}}</h6>
-      <h6 style="color: cyan;">{{Personas.gender}}</h6>
-      <h6 style="color: cyan;">{{Personas.homeworld}}</h6>
-
-
+      <div class="grupo">
+      <div class="contenido1"> 
+      <h3 style="color: yellow;">Nombre : </h3>
+      <h3 style="color: white;"> {{Personas.name}}  </h3>
+      </div>
+      <div class="contenido2">  
+      <h3 style="color: yellow;">Peso :   </h3>
+      <h3 style="color: white;">{{Personas.height}}</h3>
+      </div>
+      <div class="contenido3"> 
+      <h3 style="color: yellow;">Masa : </h3>  
+      <h3 style="color: white;">{{Personas.mass}}</h3>
+      </div>
+      <div class="contenido4"> 
+      <h3 style="color: yellow;">Color de Cabello :   </h3>
+            <h3 style="color: white;">{{Personas.hair_color}}</h3>
+      </div>
+      <div class="contenido5"> 
+      <h3 style="color: yellow;">Color de Piel :      </h3>
+            <h3 style="color: white;">{{Personas.skin_color}}</h3>
+      </div>
+      <div class="contenido6"> 
+      <h3 style="color: yellow;">Color de los ojos :  </h3>
+            <h3 style="color: white;">{{Personas.eye_color}}</h3>
+      </div>
+      <div class="contenido7"> 
+      <h3 style="color: yellow;">Fecha de nacimiento :</h3>
+            <h3 style="color: white;">{{Personas.birth_year}}</h3>
+      </div>
+      <div class="contenido8"> 
+      <h3 style="color: yellow;">Genero : </h3>
+      <h3 style="color: white;"> {{Personas.gender}}</h3>
+      </div>
+      <div class="contenido9"> 
+      <h3 style="color: yellow;">Hogar :  </h3>
+      <h3 style="color: white;"> {{Personas.homeworld}}</h3>
+      </div>
+</div><br>
 </div>
+</div>
+</div>
+
+
