--- a/src/app/component/footer/footer.component.html
+++ b/src/app/component/footer/footer.component.html
@@ -1,12 +1,26 @@
 
-<div>
-  <p>footer works!</p>
-<footer class="footer bg-inverse text-center">
-<div class="container">
-        <p class="text-red">
-         &copy; Aqui va el footer!!!
-        </p>
-</div>
-</footer>
-</div>
+<footer class="footer-distributed">
+ 
+  <div class="footer-left">
+    <h3><span>Star Wars</span></h3>
+    <p class="footer-company-name">© 2020 Proyecto Angular</p>
+  </div>
 
+  <div class="footer-center">
+    <div>
+      <p class="footer-company-name">Cristhian Eduardo Cortes</p><br>
+      <p class="footer-company-name">Fernando Tibaduiza Gutierrez</p><br>
+      <p class="footer-company-name">Jeisson Alonso Gomez Herrera</p><br>
+      <p class="footer-company-name">Carlos Andrés Navarrete Morales</p>
+    </div>
+  </div>
+
+  <div class="footer-right">
+    <div>
+      <p class="footer-company-name">crcortes9@poligran.edu.co</p>
+      <p class="footer-company-name">fetibaduiza@poligran.edu.co</p>
+      <p class="footer-company-name">jegomezh2@poligran.edu.co</p>
+      <p class="footer-company-name">canavarrete2@poligran.edu.co</p>
+    </div>
+  </div>
+</footer>
